# fourier-svg

./: .gitignore  README.md  pyproject.toml
fourier/: __init__.py  __main__.py  plot.py  series.py
